proposal page1 i tag arrangement success!

--- a/fundraising-AboutPlatform.html
+++ b/fundraising-AboutPlatform.html
@@ -7,6 +7,8 @@
     <meta content="Free HTML Templates" name="keywords" />
     <meta content="Free HTML Templates" name="description" />
 
+    <script src="https://kit.fontawesome.com/4be45006bc.js" crossorigin="anonymous"></script>
+
     <!-- Favicon -->
     <link href="img/favicon.ico" rel="icon" />
 
