--- a/propsal-page1.html
+++ b/propsal-page1.html
@@ -102,7 +102,7 @@
                     <!-- <div class="position-relative rounded-top"> -->
                         <div class="d-flex align-items-center">
                             <!-- <i class="bi bi-phone-vibrate fs-1 text-primary me-3"></i> -->
-                            <div class="text-start" style="height: 100%;">
+                            <div class="text-start" style="min-height: 232px; min-width: 450px;">
                                 <h5 class="mb-0 h5">已達標</h5>
                                 <hr>
                                 <h4 class="mb-2 h5">偏鄉牙醫志工團｜為偏鄉學童巡迴牙齒健檢</h4>
@@ -110,13 +110,16 @@
                                 <div style="margin-top: 15px; height: 4px; background-color: gray;">
                                     <div style="height: 4px; width: 100%; background: lightcoral"></div>
                                 </div>
-                                <p style="margin: 0; font-size: small; display: inline;">$ 100,000,000</p>
-                                <div style="display: inline;"> | </div>
-                                <p style="margin: 0; font-size: small; display: inline;">330%</p>
-                                <p style="margin: 0; font-size: small; display: inline; float:right;">已結束</p>
-                                <hr>
-                                <div style="display: flex; position: relative;">
-                                    <div style="position: absolute; bottom: 0px; justify-content: space-around;">
+                                <div>
+                                    <p style="margin: 0; font-size: small; display: inline;">$ 100,000,000</p>
+                                    <div style="display: inline"> | </div>
+                                    <p style="margin: 0; font-size: small; display: inline;">330%</p>
+                                    <p style="margin: 0; font-size: small; display: inline; float: right;">已結束</p>
+                                </div>
+                                <hr  style="display: flex;">
+                                <!-- <div style="display: flex; flex-direction: column; justify-content: space-between; "> -->
+                                <div style="display: flex;">
+                                    <div style="position: absolute; bottom: 0px;">
                                         <i class="fa-brands fa-line fa-3x" style="color: #00c300;"></i>
                                     <!-- </div> -->
                                     <!-- <div style="justify-content: space-around;"> -->
@@ -129,6 +132,7 @@
                                         <i class="fa-solid fa-share-from-square fa-3x" style="color: gray;"></i>
                                     </div>
                                 </div>
+                                
                             </div>
                         </div>
                 </div>
