--- a/fundraising-NewProposal.html
+++ b/fundraising-NewProposal.html
@@ -8,6 +8,8 @@
     <meta content="Free HTML Templates" name="keywords">
     <meta content="Free HTML Templates" name="description">
 
+    <script src="https://kit.fontawesome.com/4be45006bc.js" crossorigin="anonymous"></script>
+
     <!-- Favicon -->
     <link href="img/favicon.ico" rel="icon">
 
@@ -37,7 +39,6 @@
     <!--用javascript引入header-->
     <script src="./js/header.js"></script>
 
-
     <!-- Full Screen Search Start -->
     <div class="modal fade" id="searchModal" tabindex="-1">
         <div class="modal-dialog modal-fullscreen">
@@ -56,7 +57,6 @@
     </div>
     <!-- Full Screen Search End -->
 
-
     <!-- Hero Start -->
     <div class="container-fluid bg-primary py-5 hero-header mb-5">
         <div class="row py-3">
@@ -69,7 +69,6 @@
         </div>
     </div>
     <!-- Hero End -->
-
 
     <!-- Appointment Start -->
     <div class="container-fluid bg-primary bg-appointment mb-5 wow fadeInUp" data-wow-delay="0.1s" style="margin-top: 90px;">
