finish all fundrasing user page but payment page

--- a/referenceHTML/header.html
+++ b/referenceHTML/header.html
@@ -71,8 +71,8 @@
         <div class="dropdown-menu m-0">
           <a href="fundraising-AboutPlatform.html" class="dropdown-item">關於平台</a>
           <a href="fundraising-AllProposal.html" class="dropdown-item">所有提案</a>
-          <a href="fundraising-Participated.html" class="dropdown-item">已贊助的提案</a>
-          <a href="fundraising-NewProposal.html" class="dropdown-item">我要提案</a>
+          <a href="fundraising-Favortie.html" class="dropdown-item">我的最愛</a>
+          <a href="fundraising-ContributionRecord.html" class="dropdown-item">募資管理</a>
         </div>
       </div>
       <a href="contact.html" class="nav-item nav-link">聯絡我們</a>
