--- a/fundraising-ContributionRecord.html
+++ b/fundraising-ContributionRecord.html
@@ -32,6 +32,7 @@
 
     <!-- Template Stylesheet -->
     <link href="css/style.css" rel="stylesheet">
+    <link href="css/fundrasing.css" rel="stylesheet">
 </head>
 
 <body>
@@ -58,10 +59,10 @@
     <!-- Full Screen Search End -->
 
     <!-- Hero Start -->
-    <div class="container-fluid bg-primary py-4 hero-header">
+    <div class="container-fluid bg-primary py-4 hero-header">  <!-- mb-5"> -->
         <div class="row py-3">
             <div class="col-12 text-center">
-                <h1 class="display-3 text-white animated zoomIn" style="margin-top: 10px;">我要提案</h1>
+                <h1 class="display-7 text-white animated zoomIn" style="margin-top: 10px;">募資紀錄</h1>
             </div>
         </div>
     </div>
@@ -79,21 +80,91 @@
                         <hr>
                         <a href="fundraising-MyProposal.html" style="color: rgb(90, 90, 90);">我的提案</a>
                     </div>
-                    <div class="py-3">
-                        <h1 class="h4" style="margin-top: 30px; margin-bottom: 10px;">您的提案將會成為最閃亮的一顆星</h1>
-                        <p class="mb-0">透過本平台的專案服務，只要您提出您的提案，我們將竭誠協助您打造完整的專案並上架</p>
-                    </div>
                 </div>
-                <div class="col-lg-10" style="padding-left:0px; padding-right:0px">
-                    <div class="appointment-form h-100 d-flex flex-column justify-content-center text-center p-5 wow zoomIn" data-wow-delay="0.6s" style="background-color: rgb(112, 206, 240);">
-                        <!-- <h1 class="text-white mb-4">我要提案</h1> -->
-                        <!-- <div class="row g-2" style="max-width: 500px;"> -->
-                            <div style="margin-bottom: 10px; text-align: left;">
-                                <span class="text-white mb-4 h3" style="display: inline;">填寫表單</span>
-                                <span class="mb-4 h6" style="display: inline; color: red;">*</span>
-                                <span class="text-white mb-4 h6" style="display: inline;">為必填</span>
-                            </div>
-                        <form>
+                <div class="col-lg-10" style="padding-left:0px; padding-right:0px; border-left: 1px solid gray;">
+                    <div class="appointment-form d-flex flex-column justify-content-center text-center p-5 wow zoomIn" data-wow-delay="0.6s">
+                            <table>
+                                <thead>
+                                    <tr>
+                                        <th>專案名稱</th>
+                                        <th style="width: 70px;">募資進度</th>
+                                        <th style="width: 70px;">出貨進度</th>
+                                        <th style="width: 110px;">預計到貨時間</th>
+                                        <th style="width: 70px;">單價</th>
+                                        <th style="width: 40px;">數量</th>
+                                        <th style="width: 70px;">總價</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr>
+                                        <td class="text-title"><a href="propsal-page1.html">SmartMi P1空氣清淨機┃小資族的空氣增質學</a></td>
+                                        <td class="td-empty" colspan="6"></td>
+                                    </tr>
+                                    <tr>
+                                        <td class="text-project"><a href="propsal-page1.html">基礎贊助包</a></td>
+                                        <td>募資中</td>
+                                        <td>無回饋</td>
+                                        <td>-</td>
+                                        <td>1,000</td>
+                                        <td>3</td>
+                                        <td>3,000</td>
+                                    </tr>
+                                    <tr>
+                                        <td class="text-project"><a href="propsal-page1.html">耗材包 ｜ 過濾濾心包 x1</a></td>
+                                        <td>已結束</td>
+                                        <td>出貨中</td>
+                                        <td>2022/09/05</td>
+                                        <td>50,000</td>
+                                        <td>1</td>
+                                        <td>50,000</td>
+                                    </tr>
+                                    <tr>
+                                        <td class="text-title"><a href="propsal-page1.html">SmartMi P1空氣清淨機┃小資族的空氣增質學</a></td>
+                                        <td class="td-empty" colspan="6"></td>
+                                    </tr>
+                                    <tr>
+                                        <td class="text-project"><a href="propsal-page1.html">基礎贊助包</a></td>
+                                        <td>募資中</td>
+                                        <td>無回饋</td>
+                                        <td>-</td>
+                                        <td>1,000</td>
+                                        <td>3</td>
+                                        <td>3,000</td>
+                                    </tr>
+                                    <tr>
+                                        <td class="text-project"><a href="propsal-page1.html">耗材包 ｜ 過濾濾心包 x1</a></td>
+                                        <td>已結束</td>
+                                        <td>出貨中</td>
+                                        <td>2022/09/05</td>
+                                        <td>50,000</td>
+                                        <td>1</td>
+                                        <td>50,000</td>
+                                    </tr>
+                                    <tr>
+                                        <td class="text-title"><a href="propsal-page1.html">SmartMi P1空氣清淨機┃小資族的空氣增質學</a></td>
+                                        <td class="td-empty" colspan="6"></td>
+                                    </tr>
+                                    <tr>
+                                        <td class="text-project"><a href="propsal-page1.html">基礎贊助包</a></td>
+                                        <td>募資中</td>
+                                        <td>無回饋</td>
+                                        <td>-</td>
+                                        <td>1,000</td>
+                                        <td>3</td>
+                                        <td>3,000</td>
+                                    </tr>
+                                    <tr>
+                                        <td class="text-project"><a href="propsal-page1.html">耗材包 ｜ 過濾濾心包 x1</a></td>
+                                        <td>已結束</td>
+                                        <td>出貨中</td>
+                                        <td>2022/09/05</td>
+                                        <td>50,000</td>
+                                        <td>1</td>
+                                        <td>50,000</td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        <!-- <form>
                             <div class="row g-2">
                                 <div class="row g-2">
                                     <div class="col-sm-2" style="display: flex; align-items: center; min-width: 115px; padding-top: 8px;">
@@ -115,7 +186,7 @@
                                     </div>
                                 </div>
                                   
-                                <!-- 選項樣板 -->
+                                選項樣板
                                 <div class="row g-2">
                                     <div class="col-sm-2" style="display: flex; align-items: center; min-width: 115px; padding-top: 8px;">
                                         <span class="mb-4 h6" style="display: inline; color: red;">*</span>
@@ -158,7 +229,7 @@
                                         <span class="h5 text-white">電子郵件：</span>
                                     </div>
                                     <div class="col-sm-9">
-                                        <!-- <input type="data" class="form-control bg-light border-0" placeholder="Your Name" style="height: 55px;"> -->
+
                                         <input type="email" class="form-control bg-light border-0" placeholder="請輸入您的電子郵件" style="height: 55px;">
                                     </div>
                                 </div>
@@ -169,7 +240,6 @@
                                         <span class="h5 text-white">手機號碼：</span>
                                     </div>
                                     <div class="col-sm-9">
-                                        <!-- <input type="data" class="form-control bg-light border-0" placeholder="Your Name" style="height: 55px;"> -->
                                         <input type="tel" class="form-control bg-light border-0" placeholder="請輸入您的手機號碼" style="height: 55px;">
                                     </div>
                                 </div>
@@ -182,7 +252,6 @@
                                         </span>
                                     </div>
                                     <div class="col-sm-9">
-                                        <!-- <input type="data" class="form-control bg-light border-0" placeholder="Your Name" style="height: 55px;"> -->
                                         <textarea name="summary" class="form-control bg-light border-0" placeholder="內容摘要" style="padding-top: 15px;" rows="9" minlength="50" maxlength="400"></textarea>
                                     </div>
                                 </div>
@@ -197,7 +266,7 @@
                                             <input type="file" style="display: none;">
                                             <i class="fa-solid fa-paperclip fa-lg" style="padding-top: 15px; float: right;"></i>
                                         </label>
-                                        <!-- <textarea name="summary" class="form-control bg-light border-0" placeholder="內容摘要" style="height: 55px;"> -->
+
                                     </div>
                                 </div>
 
@@ -208,30 +277,8 @@
                                         <button type="button" class="btn btn-primary py-2" style="display:inline-block">送出<i class="fa-solid fa-paper-plane"></i></button>
                                     </div>
                                 </div>
-                                
-
-                                <!-- <div class="col-sm-6">
-                                    <input type="email" class="form-control bg-light border-0" placeholder="Your Email" style="height: 55px;">
-                                </div>
-                                <div class="col-sm-6">
-                                    <div class="date" id="date1" data-target-input="nearest">
-                                        <input type="text"
-                                            class="form-control bg-light border-0 datetimepicker-input"
-                                            placeholder="Appointment Date" data-target="#date1" data-toggle="datetimepicker" style="height: 55px;">
-                                    </div>
-                                </div> -->
-                                <!-- <div class="col-sm-6">
-                                    <div class="time" id="time1" data-target-input="nearest">
-                                        <input type="text"
-                                            class="form-control bg-light border-0 datetimepicker-input"
-                                            placeholder="Appointment Time" data-target="#time1" data-toggle="datetimepicker" style="height: 55px;">
-                                    </div>
-                                </div>
-                                <div>
-                                    <button class="btn btn-dark w-100 py-3" type="submit">Make Appointment</button>
-                                </div> -->
                             </div>
-                        </form>
+                        </form> -->
                     </div>
                 </div>
             </div>
