--- a/fundraising-Favortie.html
+++ b/fundraising-Favortie.html
@@ -62,7 +62,7 @@
     <div class="container-fluid bg-primary py-4 hero-header mb-5">
         <div class="row py-3">
             <div class="col-12 text-center">
-                <h1 class="display-7 text-white animated zoomIn" style="margin-top: 10px;">募資提案</h1>
+                <h1 class="display-7 text-white animated zoomIn" style="margin-top: 10px;">我的最愛</h1>
             </div>
         </div>
     </div>
