--- a/fundraising-AllProposal.html
+++ b/fundraising-AllProposal.html
@@ -127,7 +127,7 @@
                         <div class="team-text position-relative bg-light text-left rounded-bottom p-4">
                             <p style="margin: 0;">已達標</p>
                             <p class="text-primary mb-0" style="font-size: small;">社團法人中華民國牙醫師公會全國聯合會</p>
-                            <a href="./fundraising/propsal-page1.html">
+                            <a href="propsal-page1.html">
                                 <h4 class="mb-2 h5">偏鄉牙醫志工團｜為偏鄉學童巡迴牙齒健檢</h4>
                             </a>
                             <div style="margin-top: 15px; height: 4px; background-color: gray;">
