--- a/fundraising-ContributionRecord.html
+++ b/fundraising-ContributionRecord.html
@@ -86,7 +86,7 @@
                             <table>
                                 <thead>
                                     <tr>
-                                        <th>專案名稱</th>
+                                        <td>專案名稱</th>
                                         <th style="width: 70px;">募資進度</th>
                                         <th style="width: 70px;">出貨進度</th>
                                         <th style="width: 110px;">預計到貨時間</th>
